--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <div class="container">
 
       <div id="root3"></div> 
-      <div id="componentePrueba"></div> 
+      <div id="Contenedor"></div> 
 
     </div>
     
