Trabajo de personajes de Dragon Ball Super

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,8 @@
     <div class="container">
 
       <div id="root3"></div> 
-      <div id="Contenedor"></div> 
+      <!-- <div id="Contenedor"></div> -->
+      <div id="ContenedorPersonaje"></div> 
 
     </div>
     
